# linksen

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/spotify/: mod.rs
src/types/: mod.rs
src/youtube/: mod.rs
